--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,3 @@
-You need Lua 5.1 and LuaSocket.
-
-Run ./juiz to get a basic configuration file.
-
-Use the --help trigger if you need help.
+Juiz is an extremely modular IRC bot that runs on Lua.
+Anyone can make their own modules which can be enabled on-the-fly.
+Made by [http://www.unreliablepollution.net/ Team Unreliable Pollution].
