--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,3 @@
 Juiz is an extremely modular IRC bot that runs on Lua.
 Anyone can make their own modules which can be enabled on-the-fly.
-Made by [http://www.unreliablepollution.net/ Team Unreliable Pollution].
+Made by "Team Unreliable Pollution":http://www.unreliablepollution.net/.
