--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Juiz is an extremely modular IRC bot that runs on Lua.
 Anyone can make their own modules which can be enabled on-the-fly.
-Made by "Team Unreliable Pollution":http://www.unreliablepollution.net/.
+Made by Team Unreliable Pollution: http://www.unreliablepollution.net/
