--- a/README
+++ b/README
@@ -14,3 +14,6 @@ Need more help? Use --help.
 2) Add a line that says "config.modules = {}"
 3) Add the name of the modules in that table, example:
 config.modules = {"util", "ccmd", "data", "admin", "help"}
+
+-- How to build a Juiz executable:
+g++ juiz.cpp /usr/lib/liblua5.1.so  /usr/lib/liblua5.1-socket.so /usr/lib/liblua5.1-mime.so -llua5.1 -llua5.1-socket -llua5.1-mime -o ./juiz
