goodnight, sweet princess

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+This project has been killed off.
+Might I interest you in ircbot by JakobOvrum? http://github.com/jakobovrum/ircbot/
+
+----------------------------------------------------------------------------------------
+
 Juiz is an extremely modular IRC bot that runs on Lua.
 Anyone can make their own modules which can be enabled on-the-fly.
 Made by Team Unreliable Pollution: http://www.unreliablepollution.net/
